# ParsGrafika

./: .gitignore  CMakeLists.txt  README.md  TgStatObjectH.h  main.cpp  pathGrafikaUTMshortPath.cpp  pathGrafikaUTMshortPathH.h  request.cpp  requestH.h  rr.txt  takeSubStr.cpp  takeSubStrH.h  tgStatObject.cpp  urls.txt
